change mail to address as per ticket PXSFCC-3048

--- a/kana/inetpub/properties/lanebryantMillena_frh.properties
+++ b/kana/inetpub/properties/lanebryantMillena_frh.properties
@@ -53,7 +53,7 @@ SmtpServer = 192.168.50.12
 #
 #      example:  MailToAddress = Kana_Chadwicks@brylane.com
 
-MailToAddress =  womanwithin@customersupport.fbbrands.com
+MailToAddress =  womanwithin.cs@customersupport.fbbrands.com
 
 
 #MailToAddress = Kana_Chadwicks@brylane.com
