--- a/kana/inetpub/properties/RoamansMillena_frh.properties
+++ b/kana/inetpub/properties/RoamansMillena_frh.properties
@@ -53,7 +53,7 @@ SmtpServer = 192.168.50.12
 #
 #      example:  MailToAddress = support@kana.com
 
-MailToAddress = roamans@customersupport.fbbrands.com
+MailToAddress = roamans.cs@customersupport.fbbrands.com
 
 # CCToAddress:   This is the (optional) e-mail address of the a POP account 
 #                which will receive carbon copies of KXMF messages generated 
